--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -15,11 +15,81 @@
 
 }
 
+.m_inner {
+    width: 1500px;
+    margin: 0 auto;
+}
 
 .slogan {
-    font-family: 'Gamja Flower';
-    font-size: 100px;
+    font-family: 'Montserrat';
 }
+
+
+.sty {
+    font-weight: 800;
+    color: #fff;
+    font-size: 150px;
+    opacity: 0;
+    transform: translate(-300px, 0);
+
+    text-shadow: -1px 0px #000, 0px 1px #000, 1px 0px #000, 0px -1px #000;
+}
+
+
+.bold {
+    font-weight: 700;
+    margin-top: -50px;
+    font-size: 100px;
+    opacity: 0;
+    transform: translate(300px, 0);
+}
+
+
+.section.on .sty {
+    transform: translate(0, 0);
+    opacity: 1;
+    transition: 1s 1s;
+}
+
+.section.on .bold {
+    transform: translate(0, 0);
+    opacity: 1;
+    transition: 1s 2s;
+}
+
+
+
+
+.circle {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    width: 200px;
+    height: 200px;
+    background: url(../images/circletypo.png) no-repeat;
+    animation: turn 5s linear infinite;
+    opacity: 0;
+}
+
+.section.on .circle {
+    opacity: 1;
+    transition: 1s 3s;
+}
+
+@keyframes turn {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    50% {
+        transform: rotate(180deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
 
 
 .section .content {
@@ -70,6 +140,15 @@
 .header.on {
     color: #fff;
 }
+
+
+
+.header a {
+    border: 1px solid #000;
+    padding: 10px 10px;
+    border-radius: 20px;
+}
+
 
 .gnb {
     position: fixed;
@@ -205,4 +284,73 @@
 
 .mopen.on button::after {
     transform: translate(0, -50%) rotate(-45deg);
+}
+
+
+
+aside {
+    position: fixed;
+    inset: 50px auto auto 50px;
+    transform: translate(0, calc(-100% + 500px));
+    z-index: 999;
+
+    writing-mode: vertical-lr;
+}
+
+
+/* SECTION PROFILE  */
+
+.profile {}
+
+
+.profile h2 {
+
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+
+.profile>div {
+    max-width: 800px;
+    margin: 0 auto;
+    height: 180px;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+}
+
+.profile .intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    transform: rotate(15deg);
+}
+
+
+
+.profile .career,
+.profile .contact {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding-left: 50px;
+    border-radius: 50px;
+}
+
+.profile .category {
+    flex: 3;
+}
+
+.profile .elements {
+    flex: 7;
+    line-height: 20px;
+}
+
+.profile .career {
+    margin-bottom: 30px;
+    background: #000;
+    color: #fff;
 }
