--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -88,13 +88,13 @@
     justify-content: center;
     align-items: center;
 
-    opacity: 0;
+    height: 0;
     overflow: hidden;
     transition: 1s;
 }
 
 .cover.on {
-    opacity: 1;
+    height: 100vh;
 }
 
 
