--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,7 +97,9 @@
     height: 100vh;
 }
 
-
+.slogan {
+    margin-left: 100px;
+}
 
 
 .sty {
@@ -144,6 +146,7 @@
     background: url(../images/circletypo.png) no-repeat;
     animation: turn 5s linear infinite;
     opacity: 0;
+
 }
 
 .section.on .circle {
@@ -166,49 +169,54 @@
 }
 
 
+.section01 .bg {
+    display: block;
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    z-index: -1;
+    font-size: 200px;
+    font-weight: 500;
+
+}
+
+
+.section .inner {
+    justify-content: space-between;
+    width: 1300px;
+    margin: 0 auto;
+    border: 1px solid #000;
+    backdrop-filter: blur(5px);
+    border-radius: 20px;
+    padding: 50px 50px;
+
+    opacity: 0;
+}
+
+.section.on .inner {
+    opacity: 1;
+    transition: 1s;
+}
+
 
 .section .content {
-    opacity: 0;
-    transform: translate(-300px, 0);
     height: 400px;
     overflow: hidden;
     align-items: start;
 }
 
+.section .content {}
 
-.section.on .content {
-    transform: translate(0, 0);
-    opacity: 1;
-    transition: 1s 1s;
-}
-
-
-.section .content .case {
-    transform: translate(0, 0);
-    transition: 2s;
-}
-
-
-.section .content:hover .case {
-    transform: translate(0, calc(-100% + 400px));
-}
 
 
 .section .description {
     display: block;
-    opacity: 0;
-    transform: translate(300px, 0);
+
     align-items: start;
     line-height: 30px;
 
 }
 
-
-.section.on .description {
-    transform: translate(0, 0);
-    opacity: 1;
-    transition: 1s 2s;
-}
 
 
 .section .description strong {
@@ -224,11 +232,15 @@
     margin-bottom: 30px;
 }
 
+.section .description h2 img {
+    width: 155px;
+}
+
 .section .description h2::after {
     display: block;
     content: "";
     height: 1px;
-    width: 600px;
+    width: 500px;
     background: #000;
     margin: 20px 0;
     transition: 1s 0.3s;
@@ -312,7 +324,7 @@
     height: 40px;
     margin: 35px 15px 0 0;
     background: #fff;
-
+    border: 1px solid #000;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     font-size: 13px;
     line-height: 40px;
@@ -459,4 +471,15 @@ aside {
     margin-bottom: 30px;
     background: #000;
     color: #fff;
+}
+
+
+
+.toTop {
+    position: fixed;
+    inset: auto 50px 50px auto;
+    z-index: 999;
+    border: 1px solid #000;
+    padding: 15px 12px;
+    border-radius: 50%;
 }
