--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,15 +97,18 @@
     height: 100vh;
 }
 
-.slogan {
-    margin-left: 100px;
+.container {
+    width: 1500px;
+    margin: 0 auto;
 }
 
 
+
 .sty {
-    font-weight: 800;
+    font-weight: 500;
+    font-size: 100px;
+    text-align: start;
     color: #fff;
-    font-size: 125px;
     opacity: 0;
     transform: translate(-300px, 0);
     text-shadow: -1px 0px #000, 0px 1px #000, 1px 0px #000, 0px -1px #000;
@@ -114,12 +117,21 @@
 
 .bold {
     font-weight: 800;
-    margin-top: -50px;
-    margin-left: 50px;
-    font-size: 120px;
+    font-size: 130px;
+    text-align: end;
     opacity: 0;
     transform: translate(300px, 0);
 }
+
+
+.scroll {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    bottom: 10px;
+    opacity: 0;
+}
+
 
 
 .section.on .sty {
@@ -134,7 +146,11 @@
     transition: 1s 2s;
 }
 
-
+.section.on .scroll {
+    bottom: 50px;
+    opacity: 1;
+    transition: 1s 3s;
+}
 
 /* 
 .circle {
@@ -177,30 +193,26 @@
     }
 } */
 
-
-.section .bg {
-    display: block;
-    position: absolute;
-    top: 10%;
-    right: 10%;
-    z-index: -1;
-    font-size: 200px;
-    font-weight: 100;
-    color: #ddd;
-
-}
-
+.section {}
 
 .section .inner {
     justify-content: space-between;
-    width: 1300px;
+    width: 1400px;
+    height: 600px;
     margin: 0 auto;
     border: 1px solid #000;
-    backdrop-filter: blur(5px);
-    border-radius: 20px;
-    padding: 60px 50px;
-
+    border-radius: 40px;
+    padding: 100px 0;
     opacity: 0;
+}
+
+.section .bg {
+    text-align: right;
+    margin-right: 270px;
+    font-size: 60px;
+    font-weight: 100;
+    color: #000;
+
 }
 
 .section.on .inner {
@@ -215,7 +227,9 @@
     align-items: start;
 }
 
-.section .content {}
+.section .content img {
+    height: 350px;
+}
 
 
 
@@ -250,7 +264,7 @@
     display: block;
     content: "";
     height: 1px;
-    width: 500px;
+    width: 600px;
     background: #000;
     margin: 20px 0;
     transition: 1s 0.3s;
@@ -416,13 +430,9 @@
 
 
 
-aside {
-    position: fixed;
-    inset: 50px auto auto 50px;
-    transform: translate(0, calc(-100% + 500px));
-    z-index: 999;
+.typo {
 
-    writing-mode: vertical-lr;
+    text-align: center;
 }
 
 
@@ -447,16 +457,16 @@ aside {
     margin-bottom: 10px;
 }
 
-.profile .intro {
+/* .profile .intro {
     display: flex;
     justify-content: center;
     align-items: center;
     background: #fff;
     transform: rotate(15deg);
-}
+} */
 
 
-
+.profile .intro,
 .profile .career,
 .profile .contact {
 
@@ -466,6 +476,7 @@ aside {
 
     padding-left: 50px;
     border-radius: 50px;
+    margin-bottom: 30px;
 }
 
 .profile .category {
@@ -478,7 +489,7 @@ aside {
 }
 
 .profile .career {
-    margin-bottom: 30px;
+
     background: #000;
     color: #fff;
 }
