--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,10 +14,32 @@
 
 }
 
-.m_inner {
-    width: 1500px;
-    margin: 0 auto;
+
+@media (max-width: 768px) {
+    .inner {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: auto;
+        margin: 0 30px;
+        min-height: 800px;
+    }
+
+    .inner>* {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .gnb {
+        display: none;
+    }
 }
+
+
 
 .header {
     position: fixed;
@@ -165,13 +187,13 @@
 
 } */
 
-.circle {
+/* .circle {
     position: fixed;
     inset: 30% auto auto 80%;
     transform: translate(-50%, -50%);
     width: 400px;
     height: 400px;
-}
+} */
 
 /* 
 .section.on .circle {
@@ -193,7 +215,30 @@
     }
 } */
 
-.section {}
+@media (max-width: 768px) {
+
+
+    .container {
+        width: auto;
+        margin: 0 30px;
+    }
+
+
+
+    .sty {
+        font-weight: 300;
+        font-size: 35px;
+
+    }
+
+
+    .bold {
+        font-weight: 800;
+        font-size: 45px;
+
+    }
+}
+
 
 .section .inner {
     justify-content: space-between;
@@ -358,6 +403,78 @@
 }
 
 
+
+@media (max-width: 768px) {
+
+    .section .inner {
+        justify-content: space-between;
+        width: auto;
+        height: 600px;
+        margin: 0 30px;
+        border: none;
+        border-radius: 40px;
+        padding: 100px 0;
+        opacity: 0;
+    }
+
+    .section .bg {
+        text-align: center;
+        margin: 0 auto -80px 0;
+        font-size: 30px;
+        font-weight: 200;
+    }
+
+    .section .content {
+        align-items: center;
+    }
+
+    .section .content img {
+        width: 100%;
+        height: 200px;
+    }
+
+    .section .description {
+        display: block;
+        align-items: start;
+        line-height: 30px;
+    }
+
+    .section .description span {
+        margin-left: 10px;
+        font-size: 20px;
+        font-weight: 300;
+    }
+
+    .section .description h2::after {
+        width: 450px;
+    }
+
+
+
+    .section .description .btn {
+        display: flex;
+        justify-content: center;
+        width: 450px;
+        text-align: center;
+    }
+
+    .section .description .btn a {
+        display: block;
+        width: 150px;
+        height: 40px;
+        margin: 35px 15px 0 0;
+        background: #fff;
+        border: 1px solid #000;
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+        font-size: 13px;
+        line-height: 40px;
+        font-weight: 500;
+        transition: 0.5s;
+
+    }
+
+}
+
 .mopen {
     position: fixed;
     inset: 50px 50px auto auto;
@@ -428,12 +545,23 @@
     transform: translate(0, -50%) rotate(-45deg);
 }
 
-
-
 .typo {
-
     text-align: center;
 }
+
+
+@media (max-width: 768px) {
+
+    .mopen {
+        position: fixed;
+        inset: 30px 30px auto auto;
+        z-index: 999;
+        width: 30px;
+        height: 30px;
+    }
+
+}
+
 
 
 /* SECTION PROFILE  */
@@ -503,4 +631,20 @@
     border: 1px solid #000;
     padding: 15px 12px;
     border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+
+    .mopen {
+        position: fixed;
+        inset: 30px 30px auto auto;
+        z-index: 999;
+        width: 30px;
+        height: 30px;
+    }
+
+    .profile {
+        padding: 0 30px;
+    }
+
 }
