--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -37,6 +37,8 @@
     .gnb {
         display: none;
     }
+
+
 }
 
 
@@ -217,6 +219,12 @@
 
 @media (max-width: 768px) {
 
+    .header {
+        font-size: 14px;
+        inset: 40px auto auto 30px;
+
+    }
+
 
     .container {
         width: auto;
@@ -233,9 +241,10 @@
 
 
     .bold {
+        text-align: start;
         font-weight: 800;
         font-size: 45px;
-
+        padding-top: 10px;
     }
 }
 
@@ -247,7 +256,7 @@
     margin: 0 auto;
     border: 1px solid #000;
     border-radius: 40px;
-    padding: 100px 0;
+    padding: 100px 30px;
     opacity: 0;
 }
 
@@ -296,27 +305,20 @@
 }
 
 .section .description h2 {
+
     font-size: 35px;
     font-weight: 500;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .section .description h2 img {
     width: 155px;
 }
 
-.section .description h2::after {
-    display: block;
-    content: "";
-    height: 1px;
-    width: 600px;
-    background: #000;
-    margin: 20px 0;
-    transition: 1s 0.3s;
-}
 
 
 .section .description span {
+
     margin-left: 10px;
     font-size: 20px;
     font-weight: 300;
@@ -325,6 +327,10 @@
 
 
 .section .description .txt_row {
+
+    border-top: 1px solid #000;
+    padding-top: 30px;
+    padding-right: 30px;
     display: flex;
     justify-content: space-between;
     line-height: 1.8;
@@ -413,14 +419,14 @@
         margin: 0 30px;
         border: none;
         border-radius: 40px;
-        padding: 100px 0;
+        padding: 140px 0 100px 0;
         opacity: 0;
     }
 
     .section .bg {
         text-align: center;
-        margin: 0 auto -80px 0;
-        font-size: 30px;
+        margin: 0 auto -150px 0;
+        font-size: 20px;
         font-weight: 200;
     }
 
@@ -430,7 +436,7 @@
 
     .section .content img {
         width: 100%;
-        height: 200px;
+        height: 150px;
     }
 
     .section .description {
@@ -439,22 +445,24 @@
         line-height: 30px;
     }
 
+    .section .description h2 img {
+        width: 85px;
+    }
+
     .section .description span {
         margin-left: 10px;
-        font-size: 20px;
+        font-size: 14px;
         font-weight: 300;
     }
 
-    .section .description h2::after {
-        width: 450px;
-    }
+
 
 
 
     .section .description .btn {
         display: flex;
         justify-content: center;
-        width: 450px;
+        width: auto;
         text-align: center;
     }
 
@@ -644,7 +652,15 @@
     }
 
     .profile {
-        padding: 0 30px;
+        padding: 50px 30px;
+        font-size: 13px;
     }
 
+    .profile>div {
+        max-width: 800px;
+        margin: 0 auto;
+        height: 130px;
+        border: 1px solid #000;
+        margin-bottom: 10px;
+    }
 }
