--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,7 +20,6 @@
         gap: 10px;
         width: auto;
         margin: 0 30px;
-        min-height: 800px;
     }
 
     .inner>* {
@@ -188,14 +187,11 @@
         margin: 0 30px;
     }
 
-
-
     .sty {
         font-weight: 300;
         font-size: 35px;
 
     }
-
 
     .bold {
         text-align: start;
@@ -223,36 +219,26 @@
     opacity: 0;
 }
 
-.section .content_bg {
-    flex: 7;
-    display: block;
-    z-index: 999;
-    overflow: hidden;
-    background: url(../images/mokup01.png) no-repeat center center/cover;
-    margin: 15px 30px;
-
-}
-
-
-.section.on .content_bg {}
-
 .section.on .inner {
     opacity: 1;
     transition: 1s;
 }
 
-.section .bg {
-    text-align: right;
-    margin-right: 270px;
-    font-size: 60px;
-    font-weight: 100;
-    color: #000;
+
+.section .content_bg {
+    flex: 7;
+    display: block;
+    position: relative;
+    z-index: 999;
+    overflow: hidden;
+    background: url(../images/mockup01.png) no-repeat center center/cover;
+    margin: 15px 30px;
 
 }
 
 
-.section .content {
 
+.section .content {
     position: relative;
     overflow: hidden;
     align-items: start;
@@ -266,15 +252,58 @@
 }
 
 
-
 .section .content .case {
     transform: translate(0, 0);
-    transition: 1s;
+    transition: 3s;
 }
 
 .section .content:hover .case {
     transform: translate(0, calc(-100% + 325px));
 }
+
+
+/* mobile mockup case */
+
+.section .mo_bg {
+    position: absolute;
+    top: 80px;
+    left: 350px;
+    display: block;
+    z-index: 999;
+    overflow: hidden;
+    background: url(../images/mockup_mo.png) no-repeat center center/contain;
+    width: 300px;
+    height: 350px;
+
+}
+
+
+
+.section .mo_content {
+
+    position: relative;
+    overflow: hidden;
+    align-items: start;
+
+    margin: 35px 85px;
+    height: 260px;
+    overflow: hidden;
+    top: 15px;
+    left: -15px;
+    border-radius: 10px;
+}
+
+
+
+.section .mo_content .mo_case {
+    transform: translate(0, 0);
+    transition: 3s;
+}
+
+.section .mo_content:hover .mo_case {
+    transform: translate(0, calc(-100% + 250px));
+}
+
 
 
 
@@ -384,6 +413,14 @@
 
 }
 
+.section .description .btn a:hover {
+    color: #fff;
+    background: #000;
+    border: 1px solid #000;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+
+}
+
 .section03 .description h2 img {
     width: 100px;
 }
@@ -393,34 +430,59 @@
     .section .inner {
         justify-content: space-between;
         width: auto;
-        height: 600px;
+        height: 900px;
         margin: 0 30px;
         border: none;
         border-radius: 40px;
-        padding: 140px 0 100px 0;
+        padding: 110px 0 180px 0;
         opacity: 0;
+        gap: 10px;
     }
 
-    .section .bg {
-        text-align: center;
-        margin: 0 auto -150px 0;
-        font-size: 20px;
-        font-weight: 200;
+    .section .content_bg {
+        margin: 0 auto;
+        width: 300px;
+    }
+
+    .section01 .content_bg {
+        background: url(../images/mo_fg_mockup.png) no-repeat center center/contain;
+
+
+    }
+
+    .section02 .content_bg {
+        background: url(../images/mo_creverse_mockup.png) no-repeat center center/contain;
+    }
+
+    .section03 .content_bg {
+        background: url(../images/mo_etude_mockup.png) no-repeat center center/contain;
+
+    }
+
+    .section04 .content_bg {
+        background: url(../images/mo_eggdrop_mockup.png) no-repeat center center/contain;
+
+    }
+
+    .section05 .content_bg {
+        background: url(../images/mo_spao_mockup.png) no-repeat center center/contain;
+
     }
 
     .section .content {
-        align-items: center;
+        display: none;
     }
 
-    .section .content img {
-        width: 100%;
-        height: 150px;
+    .section .mo_bg {
+        display: none;
     }
+
 
     .section .description {
         display: block;
         align-items: start;
         line-height: 30px;
+        padding: 0 0 0 0;
     }
 
     .section .description h2 img {
@@ -432,10 +494,6 @@
         font-size: 14px;
         font-weight: 300;
     }
-
-
-
-
 
     .section .description .btn {
         display: flex;
