--- a/css/reset.css
+++ b/css/reset.css
@@ -43,6 +43,23 @@ img {
     background: #666;
 }
 
+
+.c21 {
+    background: #8aba2b;
+}
+
+.c22 {
+    background: #2ebad2;
+}
+
+.c23 {
+    background: #5c5758;
+}
+
+.c24 {
+    background: #00babb;
+}
+
 .c31 {
     background: #ef426f;
 }
@@ -57,4 +74,36 @@ img {
 
 .c34 {
     background: #33333386;
+}
+
+.c41 {
+    background: #f0ffaa;
+}
+
+.c42 {
+    background: #ea0029;
+}
+
+.c43 {
+    background: #ffbe9f;
+}
+
+.c44 {
+    background: #000;
+}
+
+.c51 {
+    background: #fb6369;
+}
+
+.c52 {
+    background: #000;
+}
+
+.c53 {
+    background: #49d88b;
+}
+
+.c54 {
+    background: #909090;
 }
