--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -49,10 +49,8 @@
 
 
 .header a {
-    border: 1px solid #000;
-
+    font-size: 14px;
     padding: 10px 10px;
-    border-radius: 20px;
 }
 
 
@@ -219,7 +217,7 @@
 
 
 /* PROJECT SECTION */
-
+/* height:calc(100vh - 250px) */
 
 .section .inner {
     justify-content: center;
@@ -229,13 +227,11 @@
     margin: 0 auto;
 
     background-color: #fff;
-    box-shadow: 8px 8px 19px 0px rgba(0, 0, 0, 0.51);
+    /* box-shadow: 8px 8px 76px 0px rgba(0, 0, 0, 0.2); */
 
-
-    /* backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 20px;
-    box-shadow: 35px 35px 68px 0px rgba(157, 157, 157, 0.5), inset -4px -4px 16px 0px rgba(157, 157, 157, 0.6), inset 0px 11px 28px 0px rgb(255, 255, 255); */
+    background: #ffffff;
+    box-shadow: 20px 20px 60px #d9d9d9,
+        -20px -20px 60px #ffffff;
 
     padding: 100px 70px 100px 30px;
 
@@ -371,7 +367,7 @@
 
 .section .description .txt_row {
 
-    border-top: 1px solid #000;
+    border-top: 1px solid #d9d9d9;
     padding-top: 30px;
     padding-right: 30px;
     display: flex;
@@ -427,17 +423,24 @@
     width: 150px;
     height: 40px;
     margin: 35px 15px 0 0;
-    background: inherit;
-    /* border: 1px solid #000;
-    border-radius: 1px;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); */
-    border-radius: 10px;
+    /* background: inherit; */
+    /* border-radius: 10px;
     transition: all 0.3s;
     box-shadow:
         9px 9px 9px rgba(0, 0, 0, 0.06),
         -9px -9px 9px rgba(255, 255, 255, 0.6),
         inset 5px 5px 5px rgba(0, 0, 0, 0.07),
         inset -5px -5px 5px rgba(255, 255, 255, 0.7);
+ */
+
+    border-radius: 0.5em;
+    background: #ffffff;
+    border: 1px solid #e8e8e8;
+    transition: all .3s;
+    box-shadow: 3px 3px 6px #c5c5c5,
+        -3px -3px 6px #ffffff;
+
+
 
     font-size: 13px;
     line-height: 40px;
@@ -447,22 +450,30 @@
 }
 
 
-
+/* 
 .btn a:hover::before {
     background-color: #4e4e4e;
     color: #fff;
     box-shadow:
         inset 3px 3px 3px rgba(255, 255, 255, 0.35),
         inset -3px -3px 3px rgba(0, 0, 0, 0.035);
+
+
+
+        
+} */
+
+
+
+.section .description .btn a:hover {
+    border: 1px solid rgb(189, 189, 189);
 }
 
-/* .section .description .btn a:hover {
-    color: #fff;
-    background: #000;
-    border: 1px solid #000;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+.section .description .btn a:active {
+    box-shadow: 4px 4px 12px #c5c5c5,
+        -4px -4px 12px #ffffff;
+}
 
-} */
 
 .section03 .description h2 img {
     width: 100px;
@@ -715,15 +726,33 @@
 
 
 
+/* .toTop {
+    position: fixed;
+    inset: auto 50px 50px auto;
+    z-index: 999;
+    padding: 15px 12px;
+
+    font-size: 14px;
+} */
+
+
+
 .toTop {
     position: fixed;
     inset: auto 50px 50px auto;
     z-index: 999;
-    border: 1px solid #000;
 
-    padding: 15px 12px;
     border-radius: 50%;
+    font-size: 16px;
+    padding: 10px;
+
+    background: #ffffff;
+    box-shadow: 4px 4px 9px #d9d9d9,
+        -4px -4px 9px #ffffff;
 }
+
+.toTop:hover {}
+
 
 @media (max-width: 768px) {
 
@@ -747,4 +776,13 @@
         border: 1px solid #000;
         margin-bottom: 10px;
     }
+}
+
+
+
+footer {
+    position: fixed;
+    inset: auto auto 50px 50px;
+    z-index: 999;
+    font-size: 14px;
 }
