--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -119,11 +119,13 @@
 }
 
 .cover ul {
+    width: 500px;
     padding: 0 12px;
 }
 
 .cover ul>li a {
     position: relative;
+    height: 100px;
 }
 
 .cover ul>li:hover a {
@@ -217,6 +219,11 @@
         font-size: 20px;
     }
 
+
+    .cover ul {
+        width: auto;
+    }
+
 }
 
 
@@ -228,7 +235,7 @@
     justify-content: center;
     gap: 50px;
     width: 1300px;
-    height: calc(100vh - 320px);
+    height: 650px;
     margin: 0 auto;
 
     background-color: #fff;
@@ -289,8 +296,8 @@
 
 .section .mo_bg {
     position: absolute;
-    top: 80px;
-    left: 350px;
+    top: 65px;
+    left: 330px;
     display: block;
     z-index: 999;
     overflow: hidden;
@@ -328,15 +335,161 @@
 }
 
 
+/* MOBILE BUTTON */
 
+
+.mark {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(0, -50%);
+    font-weight: bold;
+    color: white;
+    border-radius: 12px;
+    width: 100px;
+    height: 48px;
+    border: none;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.mark .span-mother {
+    display: flex;
+    overflow: hidden;
+
+}
+
+.mark:hover .span-mother {
+    position: absolute;
+}
+
+.mark:hover .span-mother span {
+    transform: translateY(1.2em);
+}
+
+.mark .span-mother span:nth-child(1) {
+    transition: .3s;
+}
+
+.mark .span-mother span:nth-child(2) {
+    transition: .4s;
+}
+
+.mark .span-mother span:nth-child(3) {
+    transition: .5s;
+}
+
+.mark .span-mother span:nth-child(4) {
+    transition: .6s;
+}
+
+.mark .span-mother span:nth-child(5) {
+    transition: .7s;
+}
+
+.mark .span-mother span:nth-child(6) {
+    transition: .8s;
+}
+
+.mark .span-mother2 {
+    display: flex;
+    position: absolute;
+    overflow: hidden;
+}
+
+.mark .span-mother2 span {
+    transform: translateY(-1.2em);
+}
+
+.mark:hover .span-mother2 span {
+    transform: translateY(0);
+}
+
+.mark .span-mother2 span {
+    transition: .3s;
+}
+
+.mark .span-mother2 span:nth-child(2) {
+    transition: .4s;
+}
+
+.mark .span-mother2 span:nth-child(3) {
+    transition: .5s;
+}
+
+.mark .span-mother2 span:nth-child(4) {
+    transition: .6s;
+}
+
+.mark .span-mother2 span:nth-child(5) {
+    transition: .7s;
+}
+
+.mark .span-mother2 span:nth-child(6) {
+    transition: .8s;
+}
+
+
+
+
+
+
+
+
+
+.circle {
+    position: absolute;
+    top: -30%;
+    right: -30%;
+    width: 200px;
+    height: 200px;
+    background: url(../images/res_circle03.png) no-repeat;
+    animation: turn 9s linear infinite;
+    opacity: 0;
+
+}
+
+
+.section.on .circle {
+    opacity: 1;
+    transition: 1s .3s;
+}
+
+@keyframes turn {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    50% {
+        transform: rotate(180deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
+
+
+
+
+
+
+
+/* Description part */
 
 .section .description {
+    position: relative;
     flex: 3;
     display: block;
     width: 500px;
     align-items: start;
     line-height: 30px;
     padding: 40px 0 0 0;
+    margin-top: -30px;
 }
 
 
@@ -360,7 +513,7 @@
 
 
 
-.section .description span {
+.section .description .txt_row span {
     margin-left: 10px;
     font-size: 20px;
     font-weight: 300;
@@ -371,7 +524,7 @@
 .section .description .txt_row {
 
     border-top: 1px solid #d9d9d9;
-    padding: 30px 30px;
+    padding: 30px 0;
     display: flex;
     justify-content: space-between;
     line-height: 1.8;
@@ -391,7 +544,8 @@
     font-weight: 500;
 }
 
-.section .description .txt_row span {
+.section .description .txt_row span,
+.section .description span {
     font-size: 20px;
     font-weight: 300;
 
@@ -403,6 +557,10 @@
     height: 12px;
     border-radius: 50%;
     margin: 2px 0 0 0;
+}
+
+.section .description .txt_row .desc {
+    padding-left: 70px;
 }
 
 
@@ -424,7 +582,6 @@
     display: block;
     width: 150px;
     height: 40px;
-    margin: 35px 15px 0 0;
 
     border-radius: 0.5em;
     background: #ffffff;
