--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -170,7 +170,7 @@
     right: 42%;
     width: 44px;
     height: 44px;
-    animation: spinner-y0fdc1 2s infinite ease;
+    animation: spinner-y0fdc1 3s infinite ease;
     transform-style: preserve-3d;
     opacity: 0;
 }
@@ -407,106 +407,7 @@
 }
 
 
-/* MOBILE BUTTON */
-
-
-.mark {
-    position: absolute;
-    top: 0;
-    left: 85%;
-    transform: translate(0, -50%);
-    font-weight: bold;
-    color: white;
-    border-radius: 12px;
-    width: 100px;
-    height: 48px;
-    border: none;
-    background-color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.mark .span-mother {
-    display: flex;
-    overflow: hidden;
-
-}
-
-.mark:hover .span-mother {
-    position: absolute;
-}
-
-.mark:hover .span-mother span {
-    transform: translateY(1.2em);
-}
-
-.mark .span-mother span:nth-child(1) {
-    transition: .3s;
-}
-
-.mark .span-mother span:nth-child(2) {
-    transition: .4s;
-}
-
-.mark .span-mother span:nth-child(3) {
-    transition: .5s;
-}
-
-.mark .span-mother span:nth-child(4) {
-    transition: .6s;
-}
-
-.mark .span-mother span:nth-child(5) {
-    transition: .7s;
-}
-
-.mark .span-mother span:nth-child(6) {
-    transition: .8s;
-}
-
-.mark .span-mother2 {
-    display: flex;
-    position: absolute;
-    overflow: hidden;
-}
-
-.mark .span-mother2 span {
-    transform: translateY(-1.2em);
-}
-
-.mark:hover .span-mother2 span {
-    transform: translateY(0);
-}
-
-.mark .span-mother2 span {
-    transition: .3s;
-}
-
-.mark .span-mother2 span:nth-child(2) {
-    transition: .4s;
-}
-
-.mark .span-mother2 span:nth-child(3) {
-    transition: .5s;
-}
-
-.mark .span-mother2 span:nth-child(4) {
-    transition: .6s;
-}
-
-.mark .span-mother2 span:nth-child(5) {
-    transition: .7s;
-}
-
-.mark .span-mother2 span:nth-child(6) {
-    transition: .8s;
-}
-
-
-
-/* Going Around Circle */
+/* Mobile Circle Mark */
 
 
 
@@ -580,12 +481,9 @@
     width: 155px;
 }
 
-
-
-.section .description .txt_row span {
-    margin-left: 10px;
+.section .description span {
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 
@@ -620,15 +518,10 @@
 
 .section .description .txt_row dd {
     font-size: 14px;
+    font-weight: 500;
 
 }
 
-.section .description .txt_row span,
-.section .description span {
-    font-size: 20px;
-    font-weight: 300;
-
-}
 
 .section .description .txt_row .color {
     display: inline-block;
@@ -641,6 +534,7 @@
 .section .description .txt_row .desc {
     padding-left: 70px;
     font-size: 14px;
+    font-weight: 200;
 }
 
 
@@ -918,6 +812,7 @@
     margin: 0 auto;
     height: 180px;
     margin-bottom: 10px;
+    font-weight: 400;
 
 }
 
@@ -925,7 +820,6 @@
 .profile .intro,
 .profile .career,
 .profile .contact {
-    padding: 0 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -941,6 +835,7 @@
 
 .profile .category {
     flex: 3;
+    margin-left: 50px;
 }
 
 .profile .elements {
@@ -953,8 +848,6 @@
     background: #000;
     color: #fff;
 }
-
-
 
 .toTop {
     position: fixed;
@@ -1000,6 +893,9 @@
         align-items: center;
     }
 
+    .profile .category {
+        margin-left: 0;
+    }
 }
 
 
