--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,5 +1,9 @@
 /* Accent Color Option: #f5c000 / #c77a7a /#ff4545/ #478eff */
-
+.mc {
+    background: #478eff;
+    color: #fff;
+    font-size: inherit;
+}
 
 .inner {
     display: flex;
@@ -279,6 +283,57 @@
 
 
 @media (max-width: 768px) {
+    .spinner {
+        position: absolute;
+        top: 38%;
+        right: 15%;
+        width: 20px;
+        height: 20px;
+        animation: spinner-y0fdc1 3s infinite ease;
+        transform-style: preserve-3d;
+    }
+
+    .spinner>div {
+        background-color: rgba(0, 77, 255, 0.2);
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        border: 3px solid #004dff;
+        opacity: 0;
+    }
+
+    .spinner div:nth-of-type(1) {
+        transform: translateZ(-10px) rotateY(180deg);
+    }
+
+    .spinner div:nth-of-type(2) {
+        transform: rotateY(-270deg) translateX(50%);
+        transform-origin: top right;
+    }
+
+    .spinner div:nth-of-type(3) {
+        transform: rotateY(270deg) translateX(-50%);
+        transform-origin: center left;
+    }
+
+    .spinner div:nth-of-type(4) {
+        transform: rotateX(90deg) translateY(-50%);
+        transform-origin: top center;
+    }
+
+    .spinner div:nth-of-type(5) {
+        transform: rotateX(-90deg) translateY(50%);
+        transform-origin: bottom center;
+    }
+
+    .spinner div:nth-of-type(6) {
+        transform: translateZ(10px);
+    }
+
+
+    .spinner>div {
+        border: 1px solid #004dff;
+    }
 
     .header {
         font-size: 14px;
@@ -463,7 +518,21 @@
 }
 
 
+@media (max-width: 768px) {
+    .circle {
+        position: absolute;
+        top: -30%;
+        right: 1%;
+        width: 200px;
+        height: 200px;
+        background: url(../images/res_circle03.png) no-repeat;
+        animation: turn 9s linear infinite;
+        opacity: 1;
+        z-index: 1;
 
+    }
+
+}
 
 
 
@@ -490,18 +559,14 @@
 }
 
 .section .description h2 {
-    font-size: 35px;
+    font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
 }
 
 .section .description h2 img {
     width: 155px;
-}
-
-.section .description span {
-    font-size: 20px;
-    font-weight: 400;
+    margin-right: 10px;
 }
 
 
@@ -514,6 +579,7 @@
     justify-content: space-between;
     line-height: 1.8;
 }
+
 
 .section .description .txt_row dl {
 
@@ -528,6 +594,7 @@
 .section .description .txt_row dt {
     float: left;
     clear: left;
+    /* 왼쪽정렬 */
     width: 70px;
     font-size: 15px;
     font-weight: 500;
@@ -582,8 +649,6 @@
     box-shadow: 3px 3px 6px #c5c5c5,
         -3px -3px 6px #ffffff;
 
-
-
     font-size: 13px;
     line-height: 40px;
     font-weight: 500;
@@ -617,7 +682,7 @@
     .section .inner {
         justify-content: space-between;
         width: auto;
-        height: 900px;
+        height: 970px;
         margin: 0 30px;
         border: none;
         border-radius: none;
@@ -633,6 +698,7 @@
     .section .content_bg {
         margin: 0 auto;
         width: 300px;
+        height: 200px;
     }
 
     .section01 .content_bg {
@@ -681,7 +747,6 @@
     }
 
     .section .description span {
-        margin-left: 10px;
         font-size: 14px;
         font-weight: 300;
     }
@@ -697,7 +762,7 @@
         display: block;
         width: 150px;
         height: 40px;
-        margin: 35px 15px 0 0;
+        margin: 5px 15px 0 0;
         background: #fff;
         border: 1px solid #b4b4b4;
         box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
@@ -705,19 +770,8 @@
         line-height: 40px;
         font-weight: 500;
         transition: 0.5s;
-        background: #image.png;
     }
 
-
-    .section .description .txt_row dl,
-    .section .description .txt_row dd {
-        width: auto;
-    }
-
-    .section .description .txt_row dt {
-
-        width: auto;
-    }
 
 
 }
@@ -854,6 +908,7 @@
 .profile .category {
     flex: 3;
     margin-left: 50px;
+    font-weight: 700;
 }
 
 .profile .elements {
@@ -905,15 +960,11 @@
     }
 
     .profile .contact {
-        padding: 0 30px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .profile .category {
-        margin-left: 0;
-    }
 }
 
 
@@ -923,4 +974,10 @@ footer {
     inset: auto auto 50px 50px;
     z-index: 999;
     font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    footer {
+        display: none;
+    }
 }
