--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -715,27 +715,27 @@
 
 
     .section01 .content_bg {
-        background-image: url(../images/mo_fgs_mockup.png);
+        background-image: url(../images/mo_eggdrop_mockup.png);
 
 
     }
 
     .section02 .content_bg {
-        background-image: url(../images/mo_creverse_mockup.png);
+        background-image: url(../images/mo_spao_mockup.png);
     }
 
     .section03 .content_bg {
-        background-image: url(../images/mo_etude_mockup.png);
+        background-image: url(../images/mo_fgs_mockup.png);
 
     }
 
     .section04 .content_bg {
-        background-image: url(../images/mo_eggdrop_mockup.png);
+        background-image: url(../images/mo_creverse_mockup.png);
         min-height: 150px;
     }
 
     .section05 .content_bg {
-        background: url(../images/mo_spao_mockup.png) no-repeat center center/contain;
+        background: url(../images/mo_etude_mockup.png) no-repeat center center/contain;
 
     }
 
